# mmanager

./: .gitignore  CMakeLists.txt
examples/linked_list/: list.c  list.h  list_test.c
src/: CMakeLists.txt  mmanager.c  mmanager.h
tests/: CMakeLists.txt  first_fit_test.c
unity/: CMakeLists.txt
unity/src/: unity_fixture.h
